# mediascope

./: .gitignore  LICENSE  README.md  iteration-log.md  pyproject.toml  requirements.txt
docs/: ACCURACY_GUIDE.md  ADDING_PUBLICATIONS.md  AGENT_GUIDE.md  ARCHITECTURE.md  CROSS_PUBLICATION_REFERENCE.md  EDITORIAL_HISTORIES.md  ENTITY_REFERENCE.md  FRAMING_REFERENCE.md  METHODOLOGY.md  QUALITY_STANDARDS.md  SENTIMENT_CORRECTION_REFERENCE.md  SOURCE_ANALYSIS_REFERENCE.md  TOPIC_REFERENCE.md
examples/: agent_integration.py  careers_demo.py  conflict_disclosure_demo.py  financial_journalism_demo.py  framing_correction_demo.py  full_pipeline.py  gizmodo_meta_bias_analysis.py  quick_start.py  same_event_comparison.py  sarcastic_editorial_demo.py  topic_classification_demo.py
mediascope/: __init__.py  __main__.py  analysis.py  cli.py  config.py  db.py  disclosure.py  profiles.py  reports.py  scoring.py
profiles/: _template.yaml  atlantic.yaml  gizmodo.yaml  guardian.yaml  mit-tech-review.yaml  nytimes.yaml  the-verge.yaml  wired.yaml
scripts/: count_stats.py
tests/: test_accuracy_guide.py  test_analyst_quote_attribution.py  test_analyticsinsight_meta_ai_layoff_discrimination_jul15.py  test_ap_appeals_deep_dive.py  test_arena_cross_analysis.py  test_asymmetry.py  test_atlantic_analysis.py  test_avclub_sardonic_framing.py  test_barrons_1t_child_safety_backlash_jul10.py  test_barrons_splurge_jpmorgan_jul13.py  test_bloomberg_muse_image_entities.py  test_bofa_capex_watermelon.py  test_buzzfeed_smart_glasses_womens_safety_jul14.py  test_cannes_contractors.py  test_careers.py  test_child_safety_analysis.py  test_child_safety_denial.py  test_citations.py  test_claims.py  test_cli_doc_consistency.py  test_competitive_displacement.py  test_compound_attribution_verbs.py  test_confession_framing.py  test_controlled_retreat_language.py  test_datacenter_framing_jul13.py  test_delayed_defense_and_normalization.py  test_editorial_deflation.py  test_editorial_dramatization.py  test_entities.py  test_fastco_meta_glasses_2026_07_10.py  test_foxbusiness_louisiana_datacenter_jul13.py  test_foxbusiness_meta_1_4t_penalty.py  test_foxbusiness_meta_ai_layoff_discrimination_jul14.py  (+103 more)
(+462 files in other folders)
